[package]
name = "ckb-node-bridge-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.111.0" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.111.0" }
ckb-pow = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.111.0" }
chrono = "0.4"
env_logger = "0.7"
futures = { version = "0.3.17", features = ["compat"] }
jsonrpc-client-transports = "14.2"
jsonrpc-core = "14.2"
jsonrpc-core-client = "14.2"
log = "0.4"
mysql_async = "0.24"
rdkafka = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", features = [] }
tokio = { version = "0.2", features = ["full"] }
tokio-compat = "0.1"
rand = { version = "0.7.3", features = [] }
eaglesong = "0.1"
